--- a/002.CSS학습/05.3DAni/css/solar2d.css
+++ b/002.CSS학습/05.3DAni/css/solar2d.css
@@ -24,35 +24,7 @@ body{
     overflow: hidden;
 }
 
-body *{
-    outline: 1px dashed lightblue;
-}
-
-/* 태양계박스 */
-#solar{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    /* 박스 정중앙이동 */
-    width: 250px;
-    height: 250px;
-}
-/* 태양박스 */
-#sun{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 250px;
-    height: 250px;
-}
-/* 태양이미지 */
-#sun img{
-    width: 100%;
-    height: 100%;
-}
-
-/*
+/********************************************
 [변수설정하기] 
 :root{
     --변수명1: 값1;
@@ -65,16 +37,68 @@ var(--변수명)
 ->>> 같은 값이 여러부분에서 사용될 때
 ->>> 미디어쿼리 등에서 변경이 필요한 경우
 변수값만 변경하면 복잡한 값 변경이 불필요하게 됨
-*/
+********************************************/
 
 :root{
+    /* 태양크기 */
+    --sunsz: 250px;
     /* 지구크기 */
     --esz: 80px;
+    /* 달크기 */
+    --msz: 40px;
     /* 목성크기 */
     --jsz: 150px;
+    /* 토성크기 */
+    --ssz: 160px;
     /* 명왕성크기 */
     --psz: 50px;
 }
+
+/* body *{
+    outline: 1px dashed lightblue;
+} */
+
+/* 태양계박스 */
+#solar{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /* 박스 정중앙이동 */
+    width: var(--sunsz);
+    height: var(--sunsz);
+}
+/* 태양박스 */
+#sun{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: var(--sunsz);
+    height: var(--sunsz);
+    
+    /* 원형으로만들기 */
+    border-radius: 50%;
+    /* 원형 바깥쪽 글로우 효과 */
+    box-shadow: 0 0 60px 10px orange;
+    /* 커지는 태양 이미지 숨기기 */
+    overflow: hidden;
+}
+/* 태양이미지 */
+#sun img{
+    width: 100%;
+    height: 100%;
+
+    /* 애니메이션 : 이시이지반방마 */
+    animation: flame 40s linear infinite alternate;
+}
+/* 태양이 이글거리는 애니메이션 키프레임 */
+@keyframes flame {
+    to{
+        transform: scale(1.5);
+    }
+}
+
+
 
 /* 지구 */
 #earth{
@@ -109,6 +133,30 @@ var(--변수명)
     }
 }/* 지구회전 키프레임 */
 
+/* 달 */
+#moon{
+    position: absolute;
+    /* calc() 계산으로 정중앙이동 */
+    top: calc(50% - var(--msz)/2);
+    left: calc(50% - var(--msz)/2);
+    width: var(--msz);
+    height: var(--msz);
+    background: url(../images/moon.png) no-repeat 0/100% 100%;
+    /* 애니메이션 : 이시이지반방마 */
+    animation: moon 4s linear infinite;
+}
+/* 달회전 키프레임 */
+@keyframes moon {
+    from{
+        transform: rotate(0) translateX(80px)
+        rotate(0deg);
+    }
+    to{
+        transform: rotate(360deg) translateX(80px)
+        rotate(-360deg);
+    }
+}/* 달회전 키프레임 */
+
 /* 목성 */
 #jupiter{
     position: absolute;
@@ -117,21 +165,50 @@ var(--변수명)
     left: calc(50% - var(--jsz)/2);
     width: var(--jsz);
     height: var(--jsz);
-    background: url(../images/jupiter.png) no-repeat 0/100%;
+    background: url(../images/jupiter.png) no-repeat 0/100% 100%;
     /* 애니메이션 : 이시이지반방마 */
     animation: jupiter 35s linear infinite;
 }
 /* 목성회전 키프레임 */
 @keyframes jupiter {
     from{
-        transform: rotate(0) translateX(-400px)
-        rotate(0deg);
+        transform: rotate(0) translateX(-400px) rotate(0deg);
     }
     to{
-        transform: rotate(360deg) translateX(-400px)
-        rotate(-360deg);
+        transform: rotate(360deg) translateX(-400px) rotate(-360deg);
     }
-}/* 지구회전 키프레임 */
+}/* 목성회전 키프레임 */
+/* 토성 */
+#saturn{
+    position: absolute;
+    /* calc() 계산으로 정중앙이동 */
+    top: calc(50% - var(--ssz)/2);
+    left: calc(50% - var(--ssz)/2);
+    width: var(--ssz);
+    height: var(--ssz);
+    
+    /* 애니메이션 : 이시이지반방마 */
+    animation: saturn 45s linear infinite;
+}
+/* 가상요소로 토성이미지 배경으로 넣기 */
+#saturn::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -30%;
+    width: 170%;
+    height: 100%;
+    background: url(../images/saturn.png) no-repeat 0/100% 100%;
+}
+/* 토성회전 키프레임 */
+@keyframes saturn {
+    from{
+        transform: rotate(0) translateY(-460px) rotate(0deg);
+    }
+    to{
+        transform: rotate(360deg) translateY(-460px) rotate(-360deg);
+    }
+}/* 토성회전 키프레임 */
 
 /* 명왕성 */
 #pluto{
