--- a/700.쉐도잉프로젝트/02.VOGUE_PJ/002.site/css/core.css
+++ b/700.쉐도잉프로젝트/02.VOGUE_PJ/002.site/css/core.css
@@ -32,7 +32,7 @@ font-family: 'Roboto Condensed', sans-serif;
 
 /* 공사중 표시 */
 body * {
-    outline: 1px dashed gray;
+    /* outline: 1px dashed gray; */
 }
 
 /************* 2. 공통 class *************/
@@ -90,7 +90,25 @@ body * {
     bottom: 0;
     width: 100%;
     height: 50%;
-    background-image: linear-gradient(to top, #000, rgba(0, 0, 0, 0));
+    background: linear-gradient(rgba(0,0,0,0.00),rgba(0,0,0,0.70));
+}
+/* 가상요소 컨텐츠 박스 오버 시 보더 테두리 애니 만들기 */
+.cbx::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    border: 0px solid #f00;
+    cursor: pointer;
+
+    /* 트랜지션: 속시이지 */
+    transition: border .2s ease-in-out;
+}
+/* .cbx에 오버시 */
+.cbx:hover::after{
+    border-width: 20px;
 }
 
 /* 3. 컨텐츠 타이틀 박스(h2) */
@@ -115,4 +133,9 @@ body * {
     width: 0;
     height: 0;
     overflow: hidden;
+}
+
+/* 공통배경색 클래스 */
+.bgc{
+    background-color: #f9f9f9;
 }
