--- a/팀프_메인구현소스/css/sub_Mars.css
+++ b/팀프_메인구현소스/css/sub_Mars.css
@@ -47,7 +47,7 @@ body *{
 }
 @keyframes fontAni {
     0% {
-        color: rgba(238, 231, 231, 0.144);
+        color: rgba(255, 255, 255, 0.297);
     }
     100% {
         color: #fff;
@@ -100,11 +100,26 @@ body *{
     position: absolute;
     content: '';
     display: block;
+    left: 50%;
+    transform: translateX(-50%);
     width: 500px;
-    height: 90px;
+    height: 80px;
     background-color: rgba(28, 177, 236, 0.37);
     border-radius: 50px;
     z-index: -1;
+    /* transition: 3s ease-in-out; */
+    animation: fontAni2 3s ease-in-out 10s forwards;
+}
+@keyframes fontAni2 {
+    0%{
+        left: 40%;
+        width: 100px;
+    }
+    100%{
+        left: 50%;
+        width: 500px;
+    }
+    
 }
 /* 기사 */
 .pg2 h3{
