--- a/팀프_메인구현소스/css/sub_Mars.css
+++ b/팀프_메인구현소스/css/sub_Mars.css
@@ -101,42 +101,42 @@ body *{
 /******************* 2페이지공통 *******************/
 /* 2페이지 타이틀 */
 .pg2 h2{
+    position: relative;
     display: flex;
     justify-content: center;
     font-weight: bold;
     font-size: min(5vw,64px);
     margin: 100px 0;
     color: #222;
+    white-space: nowrap;
 
-    text-shadow: 2px 2px 1px #5a686c;
+    transition: 3s ease-in-out; 
+    animation: fontAni2 3s ease-in-out 1s infinite alternate;
+}
+/* 타이틀 효과  */
+@keyframes fontAni2 {
+    0%{
+        text-shadow: 0px 0px 0px rgba(13, 199, 199, 0.562);
+    }
+    100%{
+        text-shadow: 2px 2px 5px rgba(0, 255, 255, 0.562);
+    }
 }
 /* 타이틀 글자 뒤 강조 */
-.pg2 h2::after{
+/* .pg2 h2::after{
     position: absolute;
     content: '';
     display: block;
     left: 50%;
+    top: 0px;
     transform: translateX(-50%);
     width: 500px;
-    height: 80px;
+    height: max(5vw,10px);
     background-color: rgba(28, 177, 236, 0.37);
     border-radius: 50px;
     z-index: -1;
-    /* transition: 3s ease-in-out; */
-    /* animation: fontAni2 3s ease-in-out 10s forwards; */
-}
-/* 타이틀 효과 */
-@keyframes fontAni2 {
-    0%{
-        left: 40%;
-        width: 100px;
-    }
-    100%{
-        left: 50%;
-        width: 30vw;
-    }
-    
-}
+} */ 
+
 /* 기사 */
 .pg2 h3{
     /* 효과 주기위해 설정 */
@@ -193,26 +193,42 @@ body *{
 .mars_item{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    /* column-gap: min(8vw,30px); */
     grid-template-rows: 800px;
+    max-width: 1100px;
+    margin: 0 auto;
 }
 .M_items{
     margin: 0 auto;
-    width: 40vw;
+    width: 25vw;
 }
 .Mars3d{
     width: 100%;
     height: 400px;
     border: none;
+
+    /* 효과주기위함 */
+    position: relative;
+    top: 100px;
+    opacity: 0;
+    transition: 2s ease-in-out;
+    transition-delay: 2s;
+
 }
 .mars_copy3{
     border-bottom: 1px solid #333;
-    padding: 0 17vw;
+    padding: 0 9vw;
 }
 .mars_copy3 h2{
     display: block;
     line-height: 2;
-    font-size: 4vw;
+    font-size: max(2.5vw,24px);
     font-weight: bold;
+
+    position: relative;
+    top: 100px;
+    opacity: 0;
+    transition: 2s ease-in-out;
 }
 .m_dis{
     width: 100%;
@@ -222,7 +238,7 @@ body *{
     margin-top: 30px;
 }
 .m_dis h3{
-    font-size: 2vw;
+    font-size: max(1vw,14px);
     line-height: 1.7;
 }
 
