--- a/팀프_메인구현소스/css/sub_Mars.css
+++ b/팀프_메인구현소스/css/sub_Mars.css
@@ -70,8 +70,7 @@ body *{
     width: 35vw;
     height: 390px;
     
-    /* top: 900px; */
-    /* 윗공간 */
+    margin: 0 auto;
     margin-top: 100px;
     
     /* outline: 1px dashed red; */
@@ -192,15 +191,16 @@ body *{
 }
 .mars_item{
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    /* column-gap: min(8vw,30px); */
+    grid-template-columns: repeat(2, 2fr);
+    column-gap: min(8vw,30px);
     grid-template-rows: 800px;
     max-width: 1100px;
     margin: 0 auto;
+    padding: 0 40px 0 30px;
 }
 .M_items{
     margin: 0 auto;
-    width: 25vw;
+    width: 100%;
 }
 .Mars3d{
     width: 100%;
@@ -216,15 +216,20 @@ body *{
 
 }
 .mars_copy3{
-    border-bottom: 1px solid #333;
-    padding: 0 9vw;
+    width: 100%;
 }
 .mars_copy3 h2{
     display: block;
     line-height: 2;
     font-size: max(2.5vw,24px);
     font-weight: bold;
+    text-shadow: 2px 2px #626262;
 
+    width: 10vw;
+    left: 50%;
+    transform: translateX(-50%);
+
+    /* 효과 */
     position: relative;
     top: 100px;
     opacity: 0;
@@ -233,13 +238,20 @@ body *{
 .m_dis{
     width: 100%;
     height: 200px;
-    outline: 1px dashed red;
+    /* outline: 1px dashed red; */
     margin: 0 auto;
     margin-top: 30px;
 }
 .m_dis h3{
     font-size: max(1vw,14px);
     line-height: 1.7;
+    text-align: justify;
+
+    /* 효과 */
+    position: relative;
+    top: 100px;
+    opacity: 0;
+    transition: 2s ease-in-out;
 }
 
 /******************** JS효과 변수 ********************/
